css/styles.css
@import './normalize.css';
:root{
    /* Defining our color platte*/
    --color-primary: #1C1505;
    --color-secondary: #FFF18F;
    --color-teritary: #FFDE00;
    --color-accent-one: #004DFF;
    --color-accent-two: #FFBD00;
}


*, *::after, *::before{
    box-sizing: border-box;
}
/* Typography */
::selection{
    background: var(--color-primary);
    color: #ffae00;
}


html{
    font-size: 62.5%;
}
body{
    line-height: 1.5;
    color: var(--color-primary);
}
a{
    text-decoration: none;
    color: black;
}

/* Fonts: 
Franklin Gothic Demi Cond
Forte
Haettenschweiler
Felix Titling
Informal Roman
MV Boli
*/

h1, h2, h3{
    margin-bottom: 1rem;
    line-height: 1.1;
}


h1{
    font-size: 7rem;
    font-family: 'Modern No. 20 Regular';
    font-weight: 100;
}
h2{
    font-size: 5rem;
    font-family: 'Felix Titling Regular';
    font-weight: 100;
}
.h2-special{
    font-family: 'Gill Sans MT';
}
.make-a-donation{
    font-family: 'Forte';
    font-size: 3rem;
}
.name{
    font-family: 'Felix Titling Regular';
    font-size: 1.5rem;
}
.gwuohs{
    font-family: 'Britannic Bold Bold';
    font-size: 3rem;
}
h3{
    font-size: 3.5rem;
    font-family: 'Britannic Bold Bold';

}
p{
    font-size: 2.4rem;
    font-family:'ITC Eras Light', sans-serif; 
}
@media screen and (min-width: 1024px){

    .hero-heading{
        font-size: 26vh;
    }
    .hero-heading-one{
        font-size: 26vh;
    }
    h1{
        font-size: 9rem;
    }
    h2{
        font-size: 5.6rem;
    }
    .make-a-donation{
        font-size: 4rem;
    }
    .gwuohs{
        font-family: 3.5rem;
        font-size: 4rem;
    }
    .name{
        font-size: 2rem;
    }
    h3{
        font-size: 3rem;
    }
    P{
        font-size: 2rem;
    }
    body{
        margin: 0rem 5rem;
    }
}

/* header */
.nav{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 2rem;
    height: 8rem;
    margin-top: -2rem;
}

.nav-logo img{
    height: 6rem;
}

.nav-text{
    font-family: 'Forte';
}

@media screen and (min-width: 1024px){
    .nav-text{
        font-size: 3rem;
    }
}

/* Layout */


/* hero */


.hero{
    background: var(--color-secondary);
    height: auto;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    /* align-items: center;*/
    /*justify-content: center;*/
} 

.hero-title{
    align-items: center;
    justify-self: center;
    align-self: center;
}

.hero_bottom-right{
    display: flex;
    align-items: center;
}

.hero-heading{
    margin: 1rem;
    font-size: 8rem;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    padding-left: 10rem;
}
.hero-heading-one{
    margin: 1rem;
    font-size: 8rem;
    font-family: 'Felix Titling Regular';
    padding-right: 10rem;
}

.hero_footer{
    width: auto;
    height: 100px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
}

.socials{
    justify-content: space-evenly;
}

.official{
    font-family: 'Britannic Bold Bold';
    font-size: 3rem;
    font-weight: bold;
}
.hero-heading span, .hero-heading-one span{
    display: inline-block;
}
.hero-heading span:nth-child(odd),
.hero-heading-one span:nth-child(odd) {
    color: var(--color-accent-one); 
}

/* even letters */
.hero-heading span:nth-child(even),
.hero-heading-one span:nth-child(even) {
    color: var(--color-accent-two); /* yellow */
}
@media screen and (min-width: 1024px){
   /* .hero{
        align-content: center;
        height: 90vh;
    }
    .hero-heading{
        font-size: 24vh;
    }
    .hero-heading-one{
        font-size: 24vh;
    }*/ 

    .hero-heading{
        font-size: 24vh;
    }
    .hero-heading-one{
        font-size: 24vh;
    }
    .hero{
    background: var(--color-secondary);
    height: 85vh;

    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr auto;

    padding: 4rem;
    }

    .hero-title{
    grid-column: 1 / span 2;
    text-align: center;
    }

    .hero_bottom-left{
    align-self: end;
    }

    .hero_bottom-right{
    justify-self: end;
    align-self: end;
    display: flex;
    align-items: center;
    gap: 1rem;
    }

    .hero_footer{
        gap: 2rem;
    }

    .name{
        margin-right: auto;
    }
    .follow{
        margin-left: auto;
    }

}


.item{
    padding: 2rem;
    background-color: var(--color-accent-one);
    color: white;
    text-align: center;
    border-radius: 8px;
    font-size: 4rem;
}

/* showcase */
.showcase{
    background-color: rgb(250, 250, 250);
    margin: 5rem;
    display: flex;
    flex-wrap: wrap;
    justify-self: center;
}

.article{
    display: grid;
    margin-top: 4rem;
    grid-template-columns: repeat(auto-fit, 1fr);
    align-items: center;
    justify-items: center;
    padding-bottom: 6rem;
}

.bar-wrapped{
    background-color: var(--color-secondary);
    display: flex;
    flex-wrap: wrap;
    width: 100vw;
    line-height: 1rem;
}

.y-line{
    height: 0.4rem;
    width: 8rem;
    background-color: var(--color-teritary);
}

.block{
    display: flex;
    flex-wrap: wrap;
    max-width: 1440px;
    justify-self: center;
}

.container_head h1{
    margin-top: 1rem;
}   
.article h2{
    line-height: 4rem;
}

.bar-content{
    display: flex;
    flex-wrap: wrap;
    gap: 4rem;
    text-align: center;
    justify-content: center;
}
.content_grouped p{
    text-align: center;
}
.bar_icon{
    box-shadow: 0 10px 0px rgba(85, 85, 85, 0.1);
}

.showcase__link{
    font-family: 'Felix Titling Regular';
    font-size: 1.5rem;
    background-color: var(--color-accent-two);
    text-decoration:underline;
}


@media screen and (min-width: 1024px){
    .y-line{
        width: 13rem;
    }
    .article{
        grid-template-columns: 1fr 2fr;
        max-width: 858px; 
        margin: 5rem auto;
    }
    .container_body{
        margin-top: 1rem;
        max-width: 60rem;
    }
    .article h2{
        line-height: 1rem;
    }
    .container_body p{
        margin-top: 2rem;
    }
    .bar-wrapped{
        width: auto;
        align-items: center;
    }
    .showcase__link{
        margin-right: auto;
        font-size: 1.8rem;
    }
    

}
@media screen and (max-width: 1024px){
    .container_body{
        text-align: center;
    }
}

/*


.feature {
  gap: 4rem 2rem;
  margin: 12rem 0;
}
@media screen and (min-width: 768px) {
  .feature:nth-of-type(even) .feature__content {
    order: 2;
  }
} 

.grid {
  display: grid;
}

@media screen and (min-width: 768px) {
  .grid--1x2 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (min-width: 1024px) {
  .grid--1x3 {
    grid-template-columns: repeat(3, 1fr);
  }
}

*/

